# Reddit-Clone-Haskell

./: .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  LICENSE  README.md  Readme.md  Scotty-Crud.cabal  docker-compose.yml  dockerfile  supervisord.conf
.github/workflows/: haskell.yaml
Frontend/: Signup.html  home.html  index.html  login.html  postDetail.html  style.css
app/: Main.hs
haskread-platform-be/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  env.dhall  haskread-platform-be.cabal  logs.txt  makefile  package.yaml  stack.yaml  testEnv.dhall
haskread-platform-be/.logs/: dev_logs.txt
haskread-platform-be/Wiki/: Documentatio.md  Documentation.md  NestedComments.md  design_doc.md
haskread-platform-be/app/: Main.hs
haskread-platform-be/test/: Spec.hs  TestAppConfig.hs
haskread-platform-manager/: CHANGELOG.md  LICENSE  README.md  defaultEnv.dhall  haskread-platform-manager.cabal  package.yaml  stack.yaml
haskread-platform-manager/app/: Main.hs
haskread-platform-ui/: .env  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  haskread-platform-ui.cabal  index.html  package.json  package.yaml  spago.yaml  stack.yaml  test_ui.sh
haskread-platform-ui-old/: package-lock.json
haskread-platform-ui-old/_backup/: home.html
haskread-platform-ui/Wiki/: Documentation.md  Resources.md
haskread-platform-ui/_misc/: login.html
haskread-platform-ui/app/: Main.hs
haskread-platform-ui/src/: AppM.purs  Main.purs  Store.purs
haskread-platform-ui/static/: myjs.js  myjs.ts  style.css
haskread_ui_v1/: index.html
kubernetes/: deployment.yaml  postgres-claim.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pv.yaml  service.yaml
static/: index.html  style.css  style.js
uploads/: tt.txt
(+141 files in other folders)
